--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,7 @@
 </head>
 
 <body>
+    {% include 'nav.html' %}
     <div class="container">
         <h1 class="text-center mt-3 mb-3">Glassdoor Careers</h1>
         <image class="img-fluid" id="banner" src="static\pexels-pixabay-326576.jpg"></image>
